<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_products">

    <fragment
        android:id="@+id/nav_products"
        android:name="com.tec.domingostore.Main.Products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />

    <fragment
        android:id="@+id/nav_seller"
        android:name="com.tec.domingostore.Main.Seller.SellerFragment"
        android:label="@string/menu_sellers"
        tools:layout="@layout/fragment_seller" />

    <fragment
        android:id="@+id/nav_customer"
        android:name="com.tec.domingostore.Main.Customer.CustomerFragment"
        android:label="@string/menu_customer"
        tools:layout="@layout/fragment_customer" />

    <fragment
        android:id="@+id/nav_sale"
        android:name="com.tec.domingostore.Main.Sale.SalesFragment"
        android:label="@string/menu_sale"
        tools:layout="@layout/fragment_sales" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.tec.domingostore.Main.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>